fixed stretchiness

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -254,8 +254,7 @@ body {
   }
 
   .testimonials {
-    max-width: 65%;
-    max-height: fit-content;
+    max-width: 77%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
